# improveflowH4-workflow

./: .gitignore  Readme.md  basic-requirements.txt  dnv-requirements.txt  installation.ipynb  pyproject.toml  sifio-requirements.txt
GeniERuntimeExample/: GeniERuntimeExample.ipynb  GeniERuntimeExample.py  GeniERuntimeExamplecloud.ipynb  SesamHelpers.py  oneWorkflowToolBox.py
GeniERuntimeExample/Workspace/CommonFiles/: ContainerHull_template.js  postprocessing.py  requirements.txt
SE28ExampleSimaWasimSestra/: Readme.md  SE28ExampleSimaWasimSestra.ipynb  SesamUtilities.py  SimaExample.py  SimaHelper.py  SimaHelperOld.py  oneWorkflowToolBox.py  requirements.txt  simaSimple.ipynb  tools.py  workflowCoreDemoSE28SestraAndWasim.ipynb  workflowCoreDemoSE28SestraAndWasimCloud.ipynb
SE28ExampleSimaWasimSestra/Workspace/: test_cases.xlsx  test_cases_wasim_input.xlsx
SE28ExampleSimaWasimSestra/Workspace/CommonFiles/: Floater.ssg  SimaTemplate.stask  SimaTemplateV2.stask  Wasim_Mass.inp  Wasim_Setup_template.inp  Wasim_Snapshots_template.inp  Wasim_Solve_template.inp  Wasim_Stru_template.inp  copyFiles.py  postprocessing.py  requirements.txt  test.py
SE28ExampleSimaWasimSestra/Workspace/Input/: Wasim_Solve_template.inp  sestra_template.inp
SesamCoreExample/: SesamCoreExample.ipynb  SesamCoreExamplecloud.ipynb  SesamcoreExample.py  oneWorkflowToolBox.py
SimaExamples/: SesamUtilities.py  SimaExample.ipynb  SimaExample.py  SimaExampleInPlace.py  SimaExampleInplace.ipynb
SimaExamples/WorkspaceInPlace/: test_cases_light.xlsx
installation/: basic-requirements.txt  dnv-dependency-requirements.txt  dnv-requirements.txt  dnv-sesam-workflows.txt  installation.ipynb  onecompute-requirements.txt  sifio-requirements.txt
(+5 files in other folders)
