[tool.poetry]
name = "ow-venv-poetry"
version = "0.1.0"
description = ""
authors = ["DA <deepak.arora@dnv.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "3.10.1"
pythonnet = "^3.0.2"
dnv-net-runtime = "^1.0.0.39"
dnv-net-intellisense = "^1.0.0.31"
dnv-sifio = "^5.3.2.994"
quantconnect-stubs = "^15851"
dnv-onecompute = "^8.3.0.11"
dnv-oneworkflow = "^1.0.0.799"
dnv-sesam-commands = "^5.12.0.192"
ipywidgets ="^8.1.1"
pandas = "^2.1.1"
openpyxl ="^3.1.2"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


